[package]
name = "push_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = { version = "0.13", features = ["push"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
rdkafka = { version = "0.37.0", features = ["ssl", "sasl"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
rand = "0.8"
reqwest = { version = "0.12.12", features = ["json"] }